src/compserver/abstraction/capture/uutmanipulers/CParser.java
package compserver.abstraction.capture.uutmanipulers;


import java.util.Set;
import java.util.HashSet;
import compserver.abstraction.types.spectypes.*;
import compserver.abstraction.types.impltypes.*;
import compserver.abstraction.*;
import java.util.ArrayList;
import java.util.List;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
/** ANSI C ANTLR v3 grammar

Translated from Jutta Degener's 1995 ANSI C yacc grammar by Terence Parr
July 2006.  The lexical rules were taken from the Java grammar.

Jutta says: "In 1985, Jeff Lee published his Yacc grammar (which
is accompanied by a matching Lex specification) for the April 30, 1985 draft
version of the ANSI C standard.  Tom Stockfisch reposted it to net.sources in
1987; that original, as mentioned in the answer to question 17.25 of the
comp.lang.c FAQ, can be ftp'ed from ftp.uu.net,
   file usenet/net.sources/ansi.c.grammar.Z.
I intend to keep this version as close to the current C Standard grammar as
possible; please let me know if you discover discrepancies. Jutta Degener, 1995"

Generally speaking, you need symbol table info to parse C; typedefs
define types and then IDENTIFIERS are either types or plain IDs.  I'm doing
the min necessary here tracking only type names.  This is a good example
of the global scope (called Symbols).  Every rule that declares its usage
of Symbols pushes a new copy on the stack effectively creating a new
symbol scope.  Also note rule declaration declares a rule scope that
lets any invoked rule see isTypedef boolean.  It's much easier than
passing that info down as parameters.  Very clean.  Rule
direct_declarator can then easily determine whether the IDENTIFIER
should be declared as a type name.

I have only tested this on a single file, though it is 3500 lines.

This grammar requires ANTLR v3.0.1 or higher.

Terence Parr
July 2006
*/
public class CParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "IDENTIFIER", "HEX_LITERAL", "OCTAL_LITERAL", "DECIMAL_LITERAL", "CHARACTER_LITERAL", "STRING_LITERAL", "FLOATING_POINT_LITERAL", "LETTER", "EscapeSequence", "HexDigit", "IntegerTypeSuffix", "Exponent", "FloatTypeSuffix", "OctalEscape", "UnicodeEscape", "WS", "COMMENT", "LINE_COMMENT", "LINE_COMMAND", "'typedef'", "';'", "','", "'='", "'extern'", "'static'", "'auto'", "'register'", "'void'", "'char'", "'short'", "'int'", "'long'", "'float'", "'double'", "'signed'", "'unsigned'", "'{'", "'}'", "'struct'", "'union'", "':'", "'enum'", "'const'", "'volatile'", "'('", "')'", "'['", "']'", "'*'", "'...'", "'+'", "'-'", "'/'", "'%'", "'++'", "'--'", "'sizeof'", "'.'", "'->'", "'&'", "'~'", "'!'", "'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", "'?'", "'||'", "'&&'", "'|'", "'^'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'<<'", "'>>'", "'case'", "'default'", "'if'", "'else'", "'switch'", "'while'", "'do'", "'for'", "'goto'", "'continue'", "'break'", "'return'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int FloatTypeSuffix=16;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int LETTER=11;
    public static final int EOF=-1;
    public static final int T__93=93;
    public static final int T__94=94;
    public static final int T__91=91;
    public static final int T__92=92;
    public static final int STRING_LITERAL=9;
    public static final int T__90=90;
    public static final int FLOATING_POINT_LITERAL=10;
    public static final int COMMENT=20;
    public static final int T__99=99;
    public static final int T__98=98;
    public static final int T__97=97;
    public static final int T__96=96;
    public static final int T__95=95;
    public static final int T__80=80;
    public static final int T__81=81;
    public static final int T__82=82;
    public static final int T__83=83;
    public static final int LINE_COMMENT=21;
    public static final int IntegerTypeSuffix=14;
    public static final int CHARACTER_LITERAL=8;
    public static final int T__85=85;
    public static final int T__84=84;
    public static final int T__87=87;
    public static final int T__86=86;
    public static final int T__89=89;
    public static final int T__88=88;
    public static final int WS=19;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int LINE_COMMAND=22;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int T__74=74;
    public static final int T__73=73;
    public static final int DECIMAL_LITERAL=7;
    public static final int EscapeSequence=12;
    public static final int T__79=79;
    public static final int T__78=78;
    public static final int T__77=77;
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int Exponent=15;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int HexDigit=13;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int IDENTIFIER=4;
    public static final int T__59=59;
    public static final int HEX_LITERAL=5;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int OCTAL_LITERAL=6;
    public static final int T__100=100;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int UnicodeEscape=18;
    public static final int OctalEscape=17;

    // delegates
    // delegators

    protected static class Symbols_scope {
        Set types;
    }
    protected Stack Symbols_stack = new Stack();


        public CParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[213+1];
             
             
        }
        
    protected StringTemplateGroup templateLib =
      new StringTemplateGroup("CParserTemplates", AngleBracketTemplateLexer.class);

    public void setTemplateLib(StringTemplateGroup templateLib) {
      this.templateLib = templateLib;
    }
    public StringTemplateGroup getTemplateLib() {
      return templateLib;
    }
    /** allows convenient multi-value initialization:
     *  "new STAttrMap().put(...).put(...)"
     */
    public static class STAttrMap extends HashMap {
      public STAttrMap put(String attrName, Object value) {
        super.put(attrName, value);
        return this;
      }
      public STAttrMap put(String attrName, int value) {
        super.put(attrName, new Integer(value));
        return this;
      }
    }

    public String[] getTokenNames() { return CParser.tokenNames; }
    public String getGrammarFileName() { return "C.g"; }


    	List<String> monitoredVars;
    	boolean isTypeName(String name) {
    		for (int i = Symbols_stack.size()-1; i>=0; i--) {
    			Symbols_scope scope = (Symbols_scope)Symbols_stack.get(i);
    			if ( scope.types.contains(name) ) {
    				return true;
    			}
    		}
    		return false;
    	}


    public static class makePublic_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "makePublic"
    // C.g:69:1: makePublic[List<ImplNode> vars] : ( external_declaration )+ ;
    public final CParser.makePublic_return makePublic(List<ImplNode> vars) throws RecognitionException {
        Symbols_stack.push(new Symbols_scope());

        CParser.makePublic_return retval = new CParser.makePublic_return();
        retval.start = input.LT(1);
        int makePublic_StartIndex = input.index();

          ((Symbols_scope)Symbols_stack.peek()).types = new HashSet();
        	monitoredVars = new ArrayList<String>();
        	for(int i=0;i<vars.size();i++){
        		ImplNode auxNode = vars.get(i);
        		//System.out.println("El nombre de la variable es: "+auxNode.getImplID());
        		monitoredVars.add(auxNode.getImplID());
        	}

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C.g:80:2: ( ( external_declaration )+ )
            // C.g:80:4: ( external_declaration )+
            {
            // C.g:80:4: ( external_declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                alt1 = dfa1.predict(input);
                switch (alt1) {
            	case 1 :
            	    // C.g:0:0: external_declaration
            	    {
            	    pushFollow(FOLLOW_external_declaration_in_makePublic99);
            	    external_declaration();

            	    state._fsp--;
            	    if (state.failed) return retval;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, makePublic_StartIndex); }
            Symbols_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "makePublic"

    public static class external_declaration_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "external_declaration"
    // C.g:83:1: external_declaration options {k=1; } : ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration );
    public final CParser.external_declaration_return external_declaration() throws RecognitionException {
        CParser.external_declaration_return retval = new CParser.external_declaration_return();
        retval.start = input.LT(1);
        int external_declaration_StartIndex = input.index();
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C.g:99:2: ( ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition | declaration )
            int alt2=2;
            alt2 = dfa2.predict(input);
            switch (alt2) {
                case 1 :
                    // C.g:99:4: ( ( declaration_specifiers )? declarator ( declaration )* '{' )=> function_definition
                    {
                    pushFollow(FOLLOW_function_definition_in_external_declaration135);
                    function_definition();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // C.g:100:4: declaration
                    {
                    pushFollow(FOLLOW_declaration_in_external_declaration140);
                    declaration();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;

            }
            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, external_declaration_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "external_declaration"

    public static class function_definition_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "function_definition"
    // C.g:103:1: function_definition : ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) -> {$function_definition.text.contains(\"static \")}? template(funcReplaced=$function_definition.text.replace(\"static \",\"\")) \"/*Funcion reemplazada*/ <funcReplaced>\" -> template(funcOriginal=$function_definition.text) \"<funcOriginal>\";
    public final CParser.function_definition_return function_definition() throws RecognitionException {
        Symbols_stack.push(new Symbols_scope());

        CParser.function_definition_return retval = new CParser.function_definition_return();
        retval.start = input.LT(1);
        int function_definition_StartIndex = input.index();

          ((Symbols_scope)Symbols_stack.peek()).types = new HashSet();

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C.g:108:2: ( ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement ) -> {$function_definition.text.contains(\"static \")}? template(funcReplaced=$function_definition.text.replace(\"static \",\"\")) \"/*Funcion reemplazada*/ <funcReplaced>\" -> template(funcOriginal=$function_definition.text) \"<funcOriginal>\")
            // C.g:108:4: ( declaration_specifiers )? declarator ( ( declaration )+ compound_statement | compound_statement )
            {
            // C.g:108:4: ( declaration_specifiers )?
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // C.g:0:0: declaration_specifiers
                    {
                    pushFollow(FOLLOW_declaration_specifiers_in_function_definition162);
                    declaration_specifiers();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;

            }

            pushFollow(FOLLOW_declarator_in_function_definition165);
            declarator();

            state._fsp--;
            if (state.failed) return retval;
            // C.g:109:3: ( ( declaration )+ compound_statement | compound_statement )
            int alt5=2;
            alt5 = dfa5.predict(input);
            switch (alt5) {
                case 1 :
                    // C.g:109:5: ( declaration )+ compound_statement
                    {
                    // C.g:109:5: ( declaration )+
                    int cnt4=0;
                    loop4:
                    do {
                        int alt4=2;
                        alt4 = dfa4.predict(input);
                        switch (alt4) {
                    	case 1 :
                    	    // C.g:0:0: declaration
                    	    {
                    	    pushFollow(FOLLOW_declaration_in_function_definition171);
                    	    declaration();

                    	    state._fsp--;
                    	    if (state.failed) return retval;

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt4 >= 1 ) break loop4;
                    	    if (state.backtracking>0) {state.failed=true; return retval;}
                                EarlyExitException eee =
                                    new EarlyExitException(4, input);
                                throw eee;
                        }
                        cnt4++;
                    } while (true);

                    pushFollow(FOLLOW_compound_statement_in_function_definition174);
                    compound_statement();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // C.g:110:5: compound_statement
                    {
                    pushFollow(FOLLOW_compound_statement_in_function_definition181);
                    compound_statement();

                    state._fsp--;
                    if (state.failed) return retval;

                    }
                    break;

            }



            // TEMPLATE REWRITE
            if ( state.backtracking==0 ) {
              // 111:5: -> {$function_definition.text.contains(\"static \")}? template(funcReplaced=$function_definition.text.replace(\"static \",\"\")) \"/*Funcion reemplazada*/ <funcReplaced>\"
              if (input.toString(retval.start,input.LT(-1)).contains("static ")) {
                  retval.st = new StringTemplate(templateLib, "/*Funcion reemplazada*/ <funcReplaced>",
                new STAttrMap().put("funcReplaced", input.toString(retval.start,input.LT(-1)).replace("static ","")));
              }
              else // 113:3: -> template(funcOriginal=$function_definition.text) \"<funcOriginal>\"
              {
                  retval.st = new StringTemplate(templateLib, "<funcOriginal>",
                new STAttrMap().put("funcOriginal", input.toString(retval.start,input.LT(-1))));
              }

              ((TokenRewriteStream)input).replace(
                ((Token)retval.start).getTokenIndex(),
                input.LT(-1).getTokenIndex(),
                retval.st);
            }
            }

            retval.stop = input.LT(-1);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 3, function_definition_StartIndex); }
            Symbols_stack.pop();

        }
        return retval;
    }
    // $ANTLR end "function_definition"

    protected static class declaration_scope {
        boolean isTypedef;
    }
    protected Stack declaration_stack = new Stack();

    public static class declaration_return extends ParserRuleReturnScope {
        public StringTemplate st;
        public Object getTemplate() { return st; }
        public String toString() { return st==null?null:st.toString(); }
    };

    // $ANTLR start "declaration"
    // C.g:117:1: declaration : ( 'typedef' ( declaration_specifiers )? init_declarator_list ';' | declaration_specifiers ( init_declarator_list )? ';' -> {$declaration.text.contains(\"static \") && $init_declarator_list.underMonitoring}? template(declReplaced=$declaration.text.replace(\"static \",\"\")) \"<declReplaced>\" -> template(declOriginal=$declaration.text) \"<declOriginal>\");
    public final CParser.declaration_return declaration() throws RecognitionException {
        declaration_stack.push(new declaration_scope());
        CParser.declaration_return retval = new CParser.declaration_return();
        retval.start = input.LT(1);
        int declaration_StartIndex = input.index();
        CParser.init_declarator_list_return init_declarator_list1 = null;



          ((declaration_scope)declaration_stack.peek()).isTypedef = false;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return retval; }
            // C.g:124:2: ( 'typedef' ( declaration_specifiers )? init_declarator_list ';' | declaration_specifiers ( init_declarator_list )? ';' -> {$declaration.text.contains(\"static \") && $init_declarator_list.underMonitoring}? template(declReplaced=$declaration.text.replace(\"static \",\"\")) \"<declReplaced>\" -> template(declOriginal=$declaration.text) \"<declOriginal>\")
            int alt8=2;
            alt8 = dfa8.predict(input);
            switch (alt8) {
                case 1 :
                    // C.g:124:4: 'typedef' ( declaration_specifiers )? init_declarator_list ';'
                    {
                    match(input,23,FOLLOW_23_in_declaration247); if (state.failed) return retval;
                    // C.g:124:14: ( declaration_specifiers )?
                    int alt6=2;
                    alt6 = dfa6.predict(input);
                    switch (alt6) {
                        case 1 :
                            // C.g:0:0: declaration_specifiers
                            {
                            pushFollow(FOLLOW_declaration_specifiers_in_declaration249);
                            declaration_specifiers();

                            state._fsp--;
                            if (state.failed) return retval;

                            }
                            break;

                    }

                    if ( state.backtracking==0 ) {
                      ((declaration_scope)declaration_stack.peek()).isTypedef =true; 
                    }
                    pushFollow(FOLLOW_init_declarator_list_in_declaration257);
                    init_declarator_list();

                    state._fsp--;
                    if (state.failed) return retval;
                    match(input,24,FOLLOW_24_in_declaration260); if (state.failed) return retval;

                    }
                    break;
                case 2 :
                    // C.g:126:4: declaration_specifiers ( init_declarator_list )? ';'
                    {
                    pushFollow(FOLLOW_declaration_specifiers_in_declaration266);
                    declaration_specifiers();

                    state._fsp--;
                    if (state.failed) return retval;
                    // C.g:126:27: ( init_declarator_list )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==IDENTIFIER||LA7_0==48||LA7_0==52) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // C.g:0:0: init_declarator_list
                            {
                            pushFollow(FOLLOW_init_declarator_list_in_declaration268);
                            init_declarator_list1=init_declarator_list();

                            state._fsp--;
                            if (state.failed) return retval;

                            }
                            break;

                    }
